# IRonRemote

./: .gitignore  Cargo.toml  LICENSE  README.md  flake.nix  memory.x
.cargo/: config.toml
nix/: fdt.nix  native.nix  package.nix  shell.nix
openocd/interface/: ft232h.cfg
renode/: bl602.repl  bl602.resc
renode/images/: README.md
src/: main.rs
